# OTLMOW-ModelBuilder

./: .coverage  .gitignore  README.md  Readme.ipynb  commands.txt  purge_test.sql  pyproject.toml  requirements.txt
.github/workflows/: release.yml  unittest.yml
InputFiles/: Geometrie_Artefact_2.11.db  Geometrie_Artefact_2.5.db  Geometrie_Artefact_2.6.db  Geometrie_Artefact_2.7.db
InputFiles/latest/: Geometrie_Artefact.db  OTL.db
UnitTests/: .coverage  AbstractDatatypeCreatorTests.py  CreateAllTestCasesTests.py  CreateAllTestCases_test.py  DatatypeBuilderFunctionsTests.py  DatatypeBuilderFunctions_test.py  GenericBuilderFunctionsTests.py  GenericBuilderFunctions_test.py  GeometrieArtefact_AllCasesTestClass.db  HelperFunctionsTests.py  HelperFunctions_test.py  KlTestKeuzelijst.ttl  LegacyClassCreator_test.py  OSLOCollectorTests.py  OSLOCollector_test.py  OTLClassCreatorTests.py  OTLClassCreator_test.py  OTLComplexDatatypeCreatorTests.py  OTLComplexDatatypeCreator_test.py  OTLEnumerationCreatorTests.py  OTLEnumerationCreator_test.py  OTLModelCreatorTests.py  OTLModelCreator_test.py  OTLPrimitiveDatatypeCreatorTests.py  OTLPrimitiveDatatypeCreator_test.py  OTLUnionDatatypeCreatorTests.py  OTLUnionDatatypeCreator_test.py  OTL_AllCasesTestClass.db  OTL_AllCasesTestClass_fewer_attributes.db  OTL_AllCasesTestClass_no_double_kard.db  all_test.ttl  run_all_tests.py  unittest_antiparkeerpaaltype_extracted.ttl  unittest_toestand_extracted.ttl
UnitTests/htmlcov/: CreateAllTestCases_test_py.html  DatatypeBuilderFunctions_test_py.html  GenericBuilderFunctions_test_py.html  HelperFunctions_test_py.html  OSLOCollector_test_py.html  OTLClassCreator_test_py.html  OTLComplexDatatypeCreator_test_py.html  OTLEnumerationCreator_test_py.html  OTLModelCreator_test_py.html  OTLPrimitiveDatatypeCreator_test_py.html  OTLUnionDatatypeCreator_test_py.html  __init___py.html  class_index.html  d_d7d2a508b89986e8_AbstractDatatypeCreator_py.html  d_d7d2a508b89986e8_DatatypeBuilderFunctions_py.html  d_d7d2a508b89986e8_GenericBuilderFunctions_py.html  d_d7d2a508b89986e8_GeometrieArtefactCollector_py.html  d_d7d2a508b89986e8_GeometrieInMemoryCreator_py.html  d_d7d2a508b89986e8_GeometrieInheritanceProcessor_py.html  d_d7d2a508b89986e8_GeometrieType_py.html  d_d7d2a508b89986e8_HelperFunctions_py.html  d_d7d2a508b89986e8_ModelBuilder_py.html  d_d7d2a508b89986e8_NewOTLBaseClassNotImplemented_py.html  d_d7d2a508b89986e8_OSLOCollector_py.html  (+113 more)
otlmow_modelbuilder/: AbstractDatatypeCreator.py  DatatypeBuilderFunctions.py  GenericBuilderFunctions.py  GeometrieArtefactCollector.py  GeometrieInMemoryCreator.py  GeometrieInheritanceProcessor.py  HelperFunctions.py  LegacyClassCreator.py  ModelBuilder.py  NewOTLBaseClassNotImplemented.py  OSLOCollector.py  OSLOInMemoryCreator.py  OTLClassCreator.py  OTLComplexDatatypeCreator.py  OTLEnumerationCreator.py  OTLExtraChecker.py  OTLModelCreator.py  OTLPrimitiveDatatypeCreator.py  OTLUnionDatatypeCreator.py  SQLDbReader.py  SettingsManager.py  legacy_types.csv  main.py  main_VLAG.py  settings_otlmow_modelbuilder.json
otlmow_modelbuilder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+636 files in other folders)
