[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otlmow_modelbuilder"
version = "0.19"
authors = [{name = "David Vlaminck", email = "david.vlaminck@mow.vlaanderen.be"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
  'rdflib >= 6.0.0',
  'tqdm >= 4.66.1',
]

[tool.setuptools.packages.find]
include = ["otlmow_modelbuilder*"]

[project.urls]
"Homepage" = "https://github.com/davidvlaminck/OTLMOW-ModelBuilder"
"Bug Tracker" = "https://github.com/davidvlaminck/OTLMOW-ModelBuilder/issues"
